添加Exhibition 我觉得我对了